[gd_scene load_steps=5 format=3 uid="uid://wecshwb6p210"]

[ext_resource type="Script" uid="uid://b8u43gta0yp4j" path="res://scene/item_management/inventory/InventoryPanel.gd" id="1_euivt"]
[ext_resource type="PackedScene" uid="uid://cx6c7wis3yl0l" path="res://scene/item_management/inventory/inventory_grid.tscn" id="2_325il"]

[sub_resource type="LabelSettings" id="LabelSettings_kee53"]
font_size = 19

[sub_resource type="LabelSettings" id="LabelSettings_qhxdo"]
font_size = 20

[node name="InventoryPanel" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 920.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_euivt")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -52.0
offset_right = 52.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="InventoryGrid" parent="VBoxContainer" instance=ExtResource("2_325il")]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="InventoryLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
label_settings = SubResource("LabelSettings_kee53")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CoinLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
label_settings = SubResource("LabelSettings_qhxdo")
horizontal_alignment = 2
vertical_alignment = 1
